add start/stop date info into the log